--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,7 +1,17 @@
+body {
+  background: #eff1f3;
+}
+
 .header {
   height: 48px;
-  background: #000;
-  position: relative;
+  background: #fff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding-right: 10px;
 }
 
 .logo {
@@ -11,52 +21,68 @@
   align-items: center;
 }
 
-.menu {
-  height: 48px;
-  width: 48px;
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-
-.menu-content.active {
-  padding: 15px;
-  height: 230px;
-}
-
 .menu-content {
-  overflow: hidden;
-  transition: all .8s ease;
-  padding: 0;
-  height: 0;
-  background: black;
-  position: absolute;
-  top: 48px;
-  left: 0;
-  width: 100%;
+  transition: all .4s ease;
+  height: 100%;
+  display: flex;
+  overflow-x: scroll;
+}
+
+.menu-content a.active {
+  font-weight: bolder;
+  color: #3fa7ea;
+  border-bottom: 2px solid #3fa7ea;
 }
 
 .menu-content a {
+  color: #333;
+  padding: 0 15px;
   display: block;
-  line-height: 40px;
+  flex-shrink: 0;
+  line-height: 48px;
   text-align: center;
-  color: white;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  100% {
+    transform: rotateZ(360deg);
+  }
+}
+
+.rotate {
+  animation: rotate .8s ease infinite;
 }
 
 .content {
-  padding: 15px;
+  padding: 58px 8px 44px 8px;
 }
 
 .card {
-  height: 100px;
-  margin-bottom: 20px;
-  box-shadow: 0 4px 10px rgba(100, 100, 100, 0.2);
+  background: #fff;
+  height: 80px;
+  margin-bottom: 7px;
+  display: flex;
+}
+
+.card .left {
+  flex-shrink: 0;
+  flex-basis: 140px;
+  height: 100%;
+}
+
+.card .right {
+  color: #333;
+  font-size: 13px;
+  padding: 20px;
 }
 
 .tab-bar {
   display: flex;
-  height: 44px;
-  background: #000;
+  height: 54px;
+  background: #fefefe;
   position: fixed;
   bottom: 0;
   left: 0;
@@ -69,9 +95,31 @@
   display: flex;
   justify-content: center;
   align-content: center;
+  position: relative;
+}
+
+.tab-bar .item:nth-child(1) {
+  background: url(/home.png) no-repeat center center/auto 100%;
+}
+
+.tab-bar .item:nth-child(2) {
+  background: url(/talk.png) no-repeat center center/auto 100%;
+}
+
+.tab-bar .item:nth-child(3) {
+  background: url(/discover.png) no-repeat center center/auto 100%;
+}
+
+.tab-bar .item:nth-child(4) {
+  background: url(/me.png) no-repeat center center/auto 100%;
 }
 
 .tab-bar a {
-  color: white;
-  line-height: 44px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  color: #000;
+  line-height: 54px;
 }
